moved style slick

--- a/index.html
+++ b/index.html
@@ -14,60 +14,16 @@
         
     <link rel="stylesheet" type="text/css" href="./caroussel_res/slick/slick.css">
     <link rel="stylesheet" type="text/css" href="./caroussel_res/slick/slick-theme.css">
-<<<<<<< HEAD
-=======
     <link rel="stylesheet" href="./css/reset.css" />
->>>>>>> 9bfa1c5c3b3429f9b89a736ef2bee7e052274bf2
     <link rel="stylesheet" href="./css/buttons.css" />
     <link rel="stylesheet" href="css/puce.css">  
     <link rel="stylesheet" href="./css/index.css" /> 
     <link rel="stylesheet" href="./css/buttonsServices.css" />
     <link rel="stylesheet" href="./css/style.css" /> 
+    <link rel="stylesheet" href="./css/slick.css" /> 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Domine&family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
 
-      <style type="text/css">
-    html, body {
-      margin: 0;
-      padding: 0;
-    }
-
-    * {
-      box-sizing: border-box;
-    }
-
-    .slider {
-        width: 50%;
-        margin: 100px auto;
-    }
-
-    .slick-slide {
-      margin: 0px 20px;
-    }
-
-    .slick-slide img {
-      width: 100%;
-    }
-
-    .slick-prev:before,
-    .slick-next:before {
-      color: black;
-    }
-
-
-    .slick-slide {
-      transition: all ease-in-out .3s;
-      opacity: .2;
-    }
-    
-    .slick-active {
-      opacity: .5;
-    }
-
-    .slick-current {
-      opacity: 1;
-    }
-  </style>
 </head>
 
 <body>
