--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col distantuno" >
+            <div class="col" >
                 <!-- texte de bienvenu-->
-                <h1>Bienvenue au Cinema Le Festival !</h1>
-                <p>Specialisé dans le cinéma d'animation et d'effets spéciaux à Bègles !</p>
+                <h1 class="big">Bienvenue au Cinema Le Festival !</h1>
+                <h3 class="distantuno">Specialisé dans le cinéma d'animation <br> et d'effets spéciaux à Bègles !</h3>
             </div>
         </div>
 
@@ -221,6 +221,7 @@
         </div>
     </div>
 
+    <div class="container-fluid">
     <div class="row">
         <div class="col">
             <!-- div contact-->
@@ -256,6 +257,11 @@
                         Bureau administratif
                         Cofondateur de Flip-Book
                         Et passionné d'animation</p>
+                        <ul><li>
+                    <p>Contact : 
+                        05.56.51.76.60
+                        contact@cinemalefestival.fr</p>
+                    </li></ul>
                 </div>
                 <div class="col arière1">
                     <h3>Severine</h3>
@@ -264,6 +270,11 @@
                         Cinéma "Le Festival"
                         Accueil
                     </p>
+                    <ul><li>
+                        <p>Contact : 
+                            05.56.51.76.60
+                            contact@cinemalefestival.fr</p>
+                        </li></ul>
                 </div>
                 <div class="col arière1">
                     <h3>Christoph Jule</h3>
@@ -273,11 +284,17 @@
                             Cinéma "Le Festival"
                             Chef d'ateliers
                         </p>
+                        <ul><li>
+                            <p>Contact : 
+                                05.56.51.76.60
+                                contact@cinemalefestival.fr</p>
+                            </li></ul>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
     </div>
 
 
