avancement dans la taille du slider

--- a/index.html
+++ b/index.html
@@ -253,12 +253,12 @@
                     <h3>Fabrice de la ROSA</h3>
                     <img src=img-portrait\1.png title="Fabrice de la ROSA" alt="Fabrice de la ROSA"
                         class="photoDeProfil">
-                    <p>Directeur & programmateur
+                    <p class="row rightText">Directeur & programmateur
                         Bureau administratif
                         Cofondateur de Flip-Book
                         Et passionné d'animation</p>
                         <ul><li>
-                    <p>Contact : 
+                    <p class="row rightText">Contact : 
                         05.56.51.76.60
                         contact@cinemalefestival.fr</p>
                     </li></ul>
@@ -266,12 +266,12 @@
                 <div class="col arière1">
                     <h3>Severine</h3>
                     <img src=img-portrait\3.png title="Severine" alt="Séverine" class="photoDeProfil">
-                    <p>Projectionniste & Animatrice
+                    <p class="row rightText">Projectionniste & Animatrice
                         Cinéma "Le Festival"
                         Accueil
                     </p>
                     <ul><li>
-                        <p>Contact : 
+                        <p class="row rightText">Contact : 
                             05.56.51.76.60
                             contact@cinemalefestival.fr</p>
                         </li></ul>
@@ -280,12 +280,12 @@
                     <h3>Christoph Jule</h3>
                     <img src=img-portrait\2.png title="Christoph Jule" alt title="Christoph Jule" class="photoDeProfil">
                     <div>
-                        <p>Projectionniste & Animateur
+                        <p class="row rightText">Projectionniste & Animateur
                             Cinéma "Le Festival"
                             Chef d'ateliers
                         </p>
                         <ul><li>
-                            <p>Contact : 
+                            <p class="row rightText">Contact : 
                                 05.56.51.76.60
                                 contact@cinemalefestival.fr</p>
                             </li></ul>
