plus que les appli

--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@
 
         <div class="col rightText">
             <h2 id="ecran6" class="title-anchor distantdos" class="no-black" >Notre équipe : </h2>
-            <div class="row">
-                <div class="col arière1" id="team">
-                    <h3>Fabrice de la ROSA</h3>
+            <div class="row team">
+                <div class="col arière1">
+                    <h3>Fabrice</h3>
                     <img src=img-portrait\1.png title="Fabrice de la ROSA" alt="Fabrice de la ROSA"
                         class="photoDeProfil">
                     <p class="row rightText">Directeur & programmateur
@@ -277,7 +277,7 @@
                         </li></ul>
                 </div>
                 <div class="col arière1">
-                    <h3>Christoph Jule</h3>
+                    <h3>Christoph</h3>
                     <img src=img-portrait\2.png title="Christoph Jule" alt title="Christoph Jule" class="photoDeProfil">
                     <div>
                         <p class="row rightText">Projectionniste & Animateur
