boutons couleurs et header blanc

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 </head>
 
 <body>
-    <header>
+    <header id="bar">
         <div class="container-fluid menu">
-            <div class="row" >
+            <div class="row">
                 <div>
                 <!--le menu-->
                 <div class="row men1">
