correction bug temp

--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
                     </section>
                 </div> <!-- div avec le boostrap-->
                 <a href="">
-                    <p class="minLink">Voir plus de films <img src="./img-logo/Flech-lien_petitD.png" hspace="1%" vspace="4%"></p>
+                    <p class="minLink">Voir plus de films <img src="./img-logo/Flech-lien_petitD.png" hspace="1%"
+                            vspace="4%"></p>
                 </a>
             </div>
         </div>
@@ -250,41 +251,29 @@
         <div class="row">
             <!--div avec la team cinema-->
 
-        <div class="col rightText">
-            <h2 id="ecran6" class="title-anchor distantdos" class="no-black" >Notre équipe : </h2>
-            <div class="row team">
-                <div class="col arière1">
-                    <h3>Fabrice</h3>
-                    <img src=img-portrait\1.png title="Fabrice de la ROSA" alt="Fabrice de la ROSA"
-                        class="photoDeProfil">
-                    <p class="row rightText">Directeur & programmateur
-                        Bureau administratif
-                        Cofondateur de Flip-Book
-                        Et passionné d'animation</p>
-                        <ul><li>
-                    <p class="row rightText">Contact : 
-                        05.56.51.76.60
-                        contact@cinemalefestival.fr</p>
-                    </li></ul>
-                </div>
-                <div class="col arière1">
-                    <h3>Severine</h3>
-                    <img src=img-portrait\3.png title="Severine" alt="Séverine" class="photoDeProfil">
-                    <p class="row rightText">Projectionniste & Animatrice
-                        Cinéma "Le Festival"
-                        Accueil
-                    </p>
-                    <ul><li>
-                        <p class="row rightText">Contact : 
-                            05.56.51.76.60
-                            contact@cinemalefestival.fr</p>
-                        </li></ul>
-                </div>
-                <div class="col arière1">
-                    <h3>Christoph</h3>
-                    <img src=img-portrait\2.png title="Christoph Jule" alt title="Christoph Jule" class="photoDeProfil">
-                    <div>
-                        <p class="row rightText">Projectionniste & Animateur
+            <div class="col rightText">
+                <h2 id="ecran6" class="title-anchor distantdos" class="no-black">Notre équipe : </h2>
+                <div class="row team">
+                    <div class="col arière1">
+                        <h3>Fabrice de la ROSA</h3>
+                        <img src=img-portrait\1.png title="Fabrice de la ROSA" alt="Fabrice de la ROSA"
+                            class="photoDeProfil">
+                        <p class="row rightText">Directeur & programmateur
+                            Bureau administratif
+                            Cofondateur de Flip-Book
+                            Et passionné d'animation</p>
+                        <ul>
+                            <li>
+                                <p class="row rightText">Contact :
+                                    05.56.51.76.60
+                                    contact@cinemalefestival.fr</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col arière1">
+                        <h3>Severine</h3>
+                        <img src=img-portrait\3.png title="Severine" alt="Séverine" class="photoDeProfil">
+                        <p class="row rightText">Projectionniste & Animatrice
                             Cinéma "Le Festival"
                             Accueil
                         </p>
@@ -297,13 +286,13 @@
                         </ul>
                     </div>
                     <div class="col arière1">
-                        <h3>Christoph Jule</h3>
+                        <h3>Christoph JULE</h3>
                         <img src=img-portrait\2.png title="Christoph Jule" alt title="Christoph Jule"
                             class="photoDeProfil">
                         <div>
                             <p class="row rightText">Projectionniste & Animateur
                                 Cinéma "Le Festival"
-                                Chef d'ateliers
+                                Accueil
                             </p>
                             <ul>
                                 <li>
@@ -313,6 +302,7 @@
                                 </li>
                             </ul>
                         </div>
+
                     </div>
                 </div>
             </div>
