percent and pad

--- a/index.html
+++ b/index.html
@@ -300,19 +300,31 @@
 
     <footer id="ecran7" class="title-anchor">
         <div class="container">
-            <div class="row">
-                <!--les boutons menu-->
+            <div class="row men1">
                 <div class="col">
-                    <h3>Programmation </h3>
+                    <section class="buttons">
+
+                        <a href="https://twitter.com/Dave_Conner" class="btn btn-1">
+                            <p>Programmation</p>
+                        </a>
                 </div>
                 <div class="col">
-                    <h3>Notre Cinéma</h3>
+                    <section class="buttons">
+                        <a href="https://twitter.com/Dave_Conner" class="btn btn-1">
+                            <p>Ateliers</p>
+                        </a>
                 </div>
                 <div class="col">
-                    <h3>Contact</h3>
+                    <section class="buttons">
+                        <a href="https://twitter.com/Dave_Conner" class="btn btn-1">
+                            <p>Notre Cinéma</p>
+                        </a>
                 </div>
                 <div class="col">
-                    <h3>Atelier</h3>
+                    <section class="buttons">
+                        <a href="https://twitter.com/Dave_Conner" class="btn btn-1">
+                            <p>Contact</p>
+                        </a>
                 </div>
             </div>
             <div class="row">
