corection bouton services

--- a/index.html
+++ b/index.html
@@ -128,8 +128,7 @@
                     </section>
                 </div> <!-- div avec le boostrap-->
                 <a href="">
-                    <p class="minLink">Voir plus de films <img src="./img-logo/Flech-lien_petitD.png" hspace="1%"
-                            vspace="4%"></p>
+                    <p class="minLink">Voir plus de films <img src="./img-logo/Flech-lien_petitD.png" ></p>
                 </a>
             </div>
         </div>
