--- a/index.html
+++ b/index.html
@@ -36,25 +36,25 @@
                 <div class="col">
                     <section class="buttons">
 
-                        <a href="https://twitter.com/Dave_Conner" class="btn btn-1">
+                        <a href="https://twitter.com/Dave_Conner" class="btn btn-1 btnanim">
                             <p>Programmation</p>
                         </a>
                 </div>
                 <div class="col">
                     <section class="buttons">
-                        <a href="https://twitter.com/Dave_Conner" class="btn btn-1">
+                        <a href="https://twitter.com/Dave_Conner" class="btn btn-1 btnanim">
                             <p>Ateliers</p>
                         </a>
                 </div>
                 <div class="col">
                     <section class="buttons">
-                        <a href="https://twitter.com/Dave_Conner" class="btn btn-1">
+                        <a href="https://twitter.com/Dave_Conner" class="btn btn-1 btnanim">
                             <p>Notre Cinéma</p>
                         </a>
                 </div>
                 <div class="col">
                     <section class="buttons">
-                        <a href="https://twitter.com/Dave_Conner" class="btn btn-1">
+                        <a href="https://twitter.com/Dave_Conner" class="btn btn-1 btnanim">
                             <p>Contact</p>
                         </a>
                 </div>
@@ -71,7 +71,7 @@
     </header>
 
     <nav id="main-navigation">
-        <ul>
+        <ul class="contpuces">
             <li><a href="#ecran1" class="puce puce1"> </a> </li>
             <li><a href="#ecran2" class="puce puce2"> </a> </li>
             <li><a href="#ecran3" class="puce puce3"> </a> </li>
