--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -11,17 +11,18 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-        
+
     <link rel="stylesheet" type="text/css" href="./caroussel_res/slick/slick.css">
     <link rel="stylesheet" type="text/css" href="./caroussel_res/slick/slick-theme.css">
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/buttons.css" />
-    <link rel="stylesheet" href="css/puce.css">  
-    <link rel="stylesheet" href="./css/index.css" /> 
+    <link rel="stylesheet" href="css/puce.css">
+    <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/buttonsServices.css" />
-    <link rel="stylesheet" href="./css/style.css" /> 
-    <link rel="stylesheet" href="./css/slick.css" /> 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Domine&family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/slick.css" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Domine&family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
 
 </head>
@@ -31,10 +32,10 @@
         <div class="container-fluid menu">
             <div class="row">
                 <div>
-                <!--le menu-->
-                <div class="row men1">
-                <div class="col">
-                    <section class="buttons">
+                    <!--le menu-->
+                    <div class="row men1">
+                        <div class="col">
+                            <section class="buttons">
 
                                 <a href="https://twitter.com/Dave_Conner" class="btn btn-1 btnanim">
                                     <p>Programmation</p>
@@ -66,8 +67,8 @@
                     </div>
                 </div>
             </div>
-                <!--ici le logo-->
-            </div>
+            <!--ici le logo-->
+        </div>
         </div>
     </header>
 
@@ -86,7 +87,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col" >
+            <div class="col">
                 <!-- texte de bienvenu-->
                 <h1 class="big">Bienvenue au Cinema Le Festival !</h1>
                 <h3 class="distantuno">Specialisé dans le cinéma d'animation <br> et d'effets spéciaux à Bègles !</h3>
@@ -97,47 +98,43 @@
             <div class="col">
                 <h2 id="ecran1" class="title-anchor distantdos">Nos Films à l'affiche</h2>
                 <div class="row">
-                      <section class="center slider">
+                    <section class="center slider">
                         <div>
-                          <a href="http://www.google.com"><img src="./Img-flm/100_loup/Affiche.jpg"></a>
+                            <a href="http://www.google.com"><img src="./Img-flm/100_loup/Affiche.jpg"></a>
                         </div>
                         <div>
-                          <a href="http://www.google.com"><img src="./Img-flm/Beetlejuice/Affiche.jpg"></a>
+                            <a href="http://www.google.com"><img src="./Img-flm/Beetlejuice/Affiche.jpg"></a>
                         </div>
                         <div>
-                          <a href="http://www.google.com"><img src="./Img-flm/Black_Widow/Affiche.jpg"></a>
+                            <a href="http://www.google.com"><img src="./Img-flm/Black_Widow/Affiche.jpg"></a>
                         </div>
                         <div>
-                          <a href="http://www.google.com"><img src="./Img-flm/Dark_Shadow/Affiche.jpg"></a>
+                            <a href="http://www.google.com"><img src="./Img-flm/Dark_Shadow/Affiche.jpg"></a>
                         </div>
                         <div>
-                          <a href="http://www.google.com"><img src="./Img-flm/Frankenweenie/Affiche.jpg"></a>
+                            <a href="http://www.google.com"><img src="./Img-flm/Frankenweenie/Affiche.jpg"></a>
                         </div>
                         <div>
-                          <a href="http://www.google.com"><img src="./Img-flm/Fritzi/Affiche.jpg"></a>
+                            <a href="http://www.google.com"><img src="./Img-flm/Fritzi/Affiche.jpg"></a>
                         </div>
                         <div>
-                          <a href="http://www.google.com"><img src="./Img-flm/La_chouette_en_toque/Affiche.jpg"></a>
+                            <a href="http://www.google.com"><img src="./Img-flm/La_chouette_en_toque/Affiche.jpg"></a>
                         </div>
                         <div>
-                          <a href="http://www.google.com"><img src="./Img-flm/Le_peuple_loup/Affiche.jpg"></a>
+                            <a href="http://www.google.com"><img src="./Img-flm/Le_peuple_loup/Affiche.jpg"></a>
                         </div>
                         <div>
-                          <a href="http://www.google.com"><img src="./Img-flm/Le_Quatuor_à_cornes/Affiche.jpg"></a>
+                            <a href="http://www.google.com"><img src="./Img-flm/Le_Quatuor_à_cornes/Affiche.jpg"></a>
                         </div>
-                      </section>
+                    </section>
                 </div> <!-- div avec le boostrap-->
-                <a href= ""><p class="minLink">Voir plus de films</p></a>
+                <a href="">
+                    <p class="minLink">Voir plus de films</p>
+                </a>
                 <p class="minLink"></p>
             </div>
         </div>
         <div class="row">
-<<<<<<< HEAD
-            <div class="col" >
-                <h2 id="ecran2"  class="title-anchor distantdos ">Nos Evenement</h2>
-                <div class="row"></div> <!-- div avec le boostrap-->
-                <a href= ""><p class="minLink">Voir plus d'évenement</p></a>
-=======
             <div class="col">
                 <h2 id="ecran2" class="title-anchor distantdos ">Nos Évenements</h2>
                 <div class="row">
@@ -166,7 +163,6 @@
                 <a href="">
                     <p class="minLink">Voir plus d'évenement</p>
                 </a>
->>>>>>> 737f0afdcce82eb359b7f1070dd3d2daae1feeab
             </div>
         </div>
 
@@ -217,7 +213,7 @@
                     <div class="row ">
                         <h3>Ici vous pouvez retrouver des informations <br> au sujet de notre cinéma</h3>
                     </div>
-                    <div class="row rightText" >
+                    <div class="row rightText">
                         <p>Situé à la barrière de Bègles, ''Le Festival'' propose des prix abordables pour tous, des
                             séances <br>
                             à partir de 5€, mais également des soirées à thème, des séances déguisées, des possibilités
@@ -227,7 +223,7 @@
                             international du film d'animation ''Les Nuits Magiques'' ainsi que le festival du film<br>
                             d'animation pour la petite enfance ''Les P'tits Cartooneurs'' !</p>
                     </div>
-                    <div class="row rightText" >
+                    <div class="row rightText">
                         <ul>
                             <li>
                                 <p>Deux salles Paul GRIMAULT et René LALOUX (290 et 78 places)</p>
@@ -254,29 +250,29 @@
     </div>
 
     <div class="container-fluid">
-    <div class="row">
-        <div class="col">
-            <!-- div contact-->
-            <h2 id="ecran5" class="title-anchor distantdos " class="black">Nos Contacts </h2>
-            <div class="rightText distantuno">
-                <p>
-                    05.56.51.76.60
-                    contact@cinemalefestival.fr
-                    09.51.99.04.80
+        <div class="row">
+            <div class="col">
+                <!-- div contact-->
+                <h2 id="ecran5" class="title-anchor distantdos " class="black">Nos Contacts </h2>
+                <div class="rightText distantuno">
+                    <p>
+                        05.56.51.76.60
+                        contact@cinemalefestival.fr
+                        09.51.99.04.80
+                </div>
             </div>
         </div>
-    </div>
-    <div>
         <div>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3177.0318191972688!2d-0.5648688286896452!3d44.813136927981915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5527aac4575fe1%3A0x7daa99163ab271bf!2sLe%20Festival!5e0!3m2!1sfr!2sfr!4v1603199447077!5m2!1sfr!2sfr"
-                frameborder="0" class="maps" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <div>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3177.0318191972688!2d-0.5648688286896452!3d44.813136927981915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5527aac4575fe1%3A0x7daa99163ab271bf!2sLe%20Festival!5e0!3m2!1sfr!2sfr!4v1603199447077!5m2!1sfr!2sfr"
+                    frameborder="0" class="maps" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </div>
+            <!--mettre la carte google ici-->
         </div>
-        <!--mettre la carte google ici-->
-    </div>
 
-    <div class="row">
-        <!--div avec la team cinema-->
+        <div class="row">
+            <!--div avec la team cinema-->
 
             <div class="col rightText">
                 <h2 id="ecran6" class="title-anchor distantdos" class="no-black">Notre équipe : </h2>
@@ -304,13 +300,6 @@
                             Cinéma "Le Festival"
                             Chef d'ateliers
                         </p>
-<<<<<<< HEAD
-                        <ul><li>
-                            <p class="row rightText">Contact : 
-                                05.56.51.76.60
-                                contact@cinemalefestival.fr</p>
-                            </li></ul>
-=======
                         <ul>
                             <li>
                                 <p class="row rightText">Contact :
@@ -318,8 +307,15 @@
                                     contact@cinemalefestival.fr</p>
                             </li>
                         </ul>
-<<<<<<< HEAD
-<<<<<<< HEAD
+
+                        <ul>
+                            <li>
+                                <p class="row rightText">Contact :
+                                    05.56.51.76.60
+                                    contact@cinemalefestival.fr</p>
+                            </li>
+                        </ul>
+
                     </div>
                     <div class="col arière1">
                         <h3>Christoph</h3>
@@ -338,17 +334,13 @@
                                 </li>
                             </ul>
                         </div>
-=======
->>>>>>> f14b39c01ad8a2c9d7464eae475abe958e29bc50
->>>>>>> 737f0afdcce82eb359b7f1070dd3d2daae1feeab
-=======
->>>>>>> 9f18fbe2e857a5770907d0b233ee30b43ff03b11
+
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+    </div>
     </div>
 
 
@@ -394,69 +386,6 @@
 
     </footer>
 
-
-<<<<<<< HEAD
-      <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-  <script src="./caroussel_res/slick/slick.js" type="text/javascript" charset="utf-8"></script>
-  <script type="text/javascript">
-    $(document).on('ready', function() {
-      $(".vertical-center-4").slick({
-        dots: true,
-        vertical: true,
-        centerMode: true,
-        slidesToShow: 4,
-        slidesToScroll: 2
-      });
-      $(".vertical-center-3").slick({
-        dots: true,
-        vertical: true,
-        centerMode: true,
-        slidesToShow: 3,
-        slidesToScroll: 3
-      });
-      $(".vertical-center-2").slick({
-        dots: true,
-        vertical: true,
-        centerMode: true,
-        slidesToShow: 2,
-        slidesToScroll: 2
-      });
-      $(".vertical-center").slick({
-        dots: true,
-        vertical: true,
-        centerMode: true,
-      });
-      $(".vertical").slick({
-        dots: true,
-        vertical: true,
-        slidesToShow: 3,
-        slidesToScroll: 3
-      });
-      $(".regular").slick({
-        dots: true,
-        infinite: true,
-        slidesToShow: 3,
-        slidesToScroll: 3
-      });
-      $(".center").slick({
-        dots: true,
-        infinite: true,
-        centerMode: true,
-        slidesToShow: 3,
-        slidesToScroll: 3
-      });
-      $(".variable").slick({
-        dots: true,
-        infinite: true,
-        variableWidth: true
-      });
-      $(".lazy").slick({
-        lazyLoad: 'ondemand', // ondemand progressive anticipated
-        infinite: true
-      });
-    });
-</script>
-=======
     <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
     <script src="./caroussel_res/slick/slick.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript">
@@ -517,71 +446,125 @@
             });
         });
     </script>
-<<<<<<< HEAD
-=======
-      $(document).on('ready', function() {
-        $(".vertical-center-4").slick({
-          dots: true,
-          vertical: true,
-          centerMode: true,
-          slidesToShow: 4,
-          slidesToScroll: 2
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+    <script src="./caroussel_res/slick/slick.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript">
+        $(document).on('ready', function () {
+            $(".vertical-center-4").slick({
+                dots: true,
+                vertical: true,
+                centerMode: true,
+                slidesToShow: 4,
+                slidesToScroll: 2
+            });
+            $(".vertical-center-3").slick({
+                dots: true,
+                vertical: true,
+                centerMode: true,
+                slidesToShow: 3,
+                slidesToScroll: 3
+            });
+            $(".vertical-center-2").slick({
+                dots: true,
+                vertical: true,
+                centerMode: true,
+                slidesToShow: 2,
+                slidesToScroll: 2
+            });
+            $(".vertical-center").slick({
+                dots: true,
+                vertical: true,
+                centerMode: true,
+            });
+            $(".vertical").slick({
+                dots: true,
+                vertical: true,
+                slidesToShow: 3,
+                slidesToScroll: 3
+            });
+            $(".regular").slick({
+                dots: true,
+                infinite: true,
+                slidesToShow: 3,
+                slidesToScroll: 3
+            });
+            $(".center").slick({
+                dots: true,
+                infinite: true,
+                centerMode: true,
+                slidesToShow: 3,
+                slidesToScroll: 3
+            });
+            $(".variable").slick({
+                dots: true,
+                infinite: true,
+                variableWidth: true
+            });
+            $(".lazy").slick({
+                lazyLoad: 'ondemand', // ondemand progressive anticipated
+                infinite: true
+            });
         });
-        $(".vertical-center-3").slick({
-          dots: true,
-          vertical: true,
-          centerMode: true,
-          slidesToShow: 3,
-          slidesToScroll: 3
-        });
-        $(".vertical-center-2").slick({
-          dots: true,
-          vertical: true,
-          centerMode: true,
-          slidesToShow: 2,
-          slidesToScroll: 2
-        });
-        $(".vertical-center").slick({
-          dots: true,
-          vertical: true,
-          centerMode: true,
-        });
-        $(".vertical").slick({
-          dots: true,
-          vertical: true,
-          slidesToShow: 3,
-          slidesToScroll: 3
-        });
-        $(".regular").slick({
-          dots: true,
-          infinite: true,
-          slidesToShow: 3,
-          slidesToScroll: 3
-        });
-        $(".center").slick({
-          dots: true,
-          infinite: true,
-          centerMode: true,
-          slidesToShow: 5,
-          slidesToScroll: 3
-        });
-        $(".variable").slick({
-          dots: true,
-          infinite: true,
-          variableWidth: true
-        });
-        $(".lazy").slick({
-          lazyLoad: 'ondemand', // ondemand progressive anticipated
-          infinite: true
-        });
-      });
-  </script>
->>>>>>> f14b39c01ad8a2c9d7464eae475abe958e29bc50
->>>>>>> 737f0afdcce82eb359b7f1070dd3d2daae1feeab
-=======
->>>>>>> 9f18fbe2e857a5770907d0b233ee30b43ff03b11
+    </script>
+    $(document).on('ready', function() {
+    $(".vertical-center-4").slick({
+    dots: true,
+    vertical: true,
+    centerMode: true,
+    slidesToShow: 4,
+    slidesToScroll: 2
+    });
+    $(".vertical-center-3").slick({
+    dots: true,
+    vertical: true,
+    centerMode: true,
+    slidesToShow: 3,
+    slidesToScroll: 3
+    });
+    $(".vertical-center-2").slick({
+    dots: true,
+    vertical: true,
+    centerMode: true,
+    slidesToShow: 2,
+    slidesToScroll: 2
+    });
+    $(".vertical-center").slick({
+    dots: true,
+    vertical: true,
+    centerMode: true,
+    });
+    $(".vertical").slick({
+    dots: true,
+    vertical: true,
+    slidesToShow: 3,
+    slidesToScroll: 3
+    });
+    $(".regular").slick({
+    dots: true,
+    infinite: true,
+    slidesToShow: 3,
+    slidesToScroll: 3
+    });
+    $(".center").slick({
+    dots: true,
+    infinite: true,
+    centerMode: true,
+    slidesToShow: 5,
+    slidesToScroll: 3
+    });
+    $(".variable").slick({
+    dots: true,
+    infinite: true,
+    variableWidth: true
+    });
+    $(".lazy").slick({
+    lazyLoad: 'ondemand', // ondemand progressive anticipated
+    infinite: true
+    });
+    });
+    </script>
 
-<script src="./js/main.js"></script>
+    <script src="./js/main.js"></script>
 
 </body>
 
