--- a/index.html
+++ b/index.html
@@ -60,10 +60,8 @@
                         </a>
                 </div>
             </div>
-                <div class="row men2">
-                    <div class="col">
-                    <img src=Img-logo\logo.png title="Notre logo" alt="Notre logo">
-                </div>
+                <div class="men2">
+                    <img style="clear:right; float: right;" src=Img-logo\logo.png title="Notre logo" alt="Notre logo">
                 </div>
                 <!--ici le logo-->
             </div>
@@ -84,7 +82,7 @@
     </nav>
 
     <div class="container-fluid">
-        <div class="row">
+        <div class="row" style="height: 100vh; text-align: center;padding-top: 15%;" id="ecran0">
             <div class="col">
                 <!-- texte de bienvenu-->
                 <h1 class="big">Bienvenue au Cinema Le Festival !</h1>
@@ -164,9 +162,9 @@
             </div>
         </div>
 
-        <div class="row ">
+        <div id="ecran3" class="row " style="height: 100vh;">
             <div class="col">
-                <h2 id="ecran3" class="title-anchor distantdos">Nos Services</h2>
+                <h2 class="title-anchor distantdos">Nos Services</h2>
                 <div class="row">
 
                     <!-- div avec les boutons-->
@@ -194,8 +192,8 @@
                     <div class="col arière2">
                         <section class="buttons2">
                             <span class="btn-2 btn-3">
-                                <img src=img-logo\Flech-lien.png title="voir plus de services"
-                                    alt="voir plus de services">
+                                <img src=img-logo\Flech-lien.svg title="voir plus de services"
+                                    alt="voir plus de services" style="height: 40%;">
                             </span>
                         </section>
                     </div>
@@ -247,19 +245,7 @@
         </div>
     </div>
 
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col">
-                <!-- div contact-->
-                <h2 id="ecran5" class="title-anchor distantdos " class="black">Nos Contacts </h2>
-                <div class="rightText distantuno">
-                    <p>
-                        05.56.51.76.60
-                        contact@cinemalefestival.fr
-                        09.51.99.04.80
-                </div>
-            </div>
-        </div>
+    <div id="ecran5" class="container-fluid" style="padding: 0;">
         <div>
             <div>
                 <iframe
@@ -268,12 +254,24 @@
             </div>
             <!--mettre la carte google ici-->
         </div>
+        <div class="row">
+            <div class="col">
+                <!-- div contact-->x
+                <h2 class="title-anchor distantdos " class="black">Nos Contacts </h2>
+                <div class="rightText distantuno">
+                    <p>
+                        05.56.51.76.60
+                        contact@cinemalefestival.fr
+                        09.51.99.04.80
+                </div>
+            </div>
+        </div>
 
         <div class="row">
             <!--div avec la team cinema-->
 
         <div class="col rightText">
-            <h2 id="ecran6" class="title-anchor distantdos" class="no-black" >Notre équipe : </h2>
+            <h2 id="ecran6" class="title-anchor distantdos" class="no-black" >Notre équipe</h2>
             <div class="row team">
                 <div class="col arière1">
                     <h3>Fabrice</h3>
@@ -344,7 +342,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class=col> <img src=img-logo\logo.png title="notre logo" alt="notre logo"></div>
+                <div class=col> <a href="#ecran0"><img src=img-logo\logo.png title="notre logo" alt="notre logo"></a></div>
                 <div class=col>
                     <p></p>
                 </div>
